<resources>
    <string name="app_name">goSquad</string>
    <string name="home_icon">Home</string>
    <string name="game_icon">Game</string>
    <string name="chat_icon">Chat</string>
    <string name="profile_icon">Profile</string>
    <string name="guilds_icon">Guilds</string>
    <string name="accepted_games">Lobby status</string>
    <string name="profile_name">profile_name</string>
    <string name="navigation_drawer_open">Open navigation Drawer</string>
    <string name="navigation_drawer_close">Close navigation Drawer</string>

    <string name="fragment_game_choose_game_hint">Choose the game</string>
    <string name="fragment_game_enter_description">Enter the description</string>
    <string name="fragment_game_enter_amount_of_people">Enter amount of people</string>

    <string name="fragment_profile_games">List of games</string>
    <string name="fragment_profile_manage_game">Manage games</string>

    <string name="information_nav">information</string>
    <string name="stats_nav">stats</string>
    <string name="history_nav">history</string>
</resources>