<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile_drawer"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/profile_icon" />
        <item
            android:id="@+id/guilds_drawer"
            android:icon="@drawable/ic_baseline_guilds_24"
            android:title="@string/guilds_icon" />
        <item
            android:id="@+id/games_drawer"
            android:icon="@drawable/ic_baseline_accepted_games_24"
            android:title="@string/accepted_games" />
    </group>
    <item android:title="">
        <menu>
            <item
                android:id="@+id/settings_drawer"
                android:icon="@drawable/ic_baseline_settings_24"
                android:title="" />
        </menu>
    </item>
</menu>